--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<!doctype html><meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=./map/">
-<title>TT-map</title>
-<a href="./map/">Перейти к карте</a>
+<!doctype html>
+<html lang="ru">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Trans-Time Map</title>
+<style>
+body { margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center; background:#0f1115; color:#e6eaf2; font:16px/1.5 "Inter",system-ui,-apple-system,"Segoe UI",sans-serif; }
+a { color:#e11d2e; text-decoration:none; border:1px solid #e11d2e; padding:12px 24px; border-radius:999px; transition:background .2s,color .2s; }
+a:hover, a:focus-visible { background:#e11d2e; color:#fff; }
+</style>
+</head>
+<body>
+<a href="./map/">Открыть карту</a>
+</body>
+</html>
