--- a/map/index.html
+++ b/map/index.html
@@ -23,15 +23,18 @@ html,body { height:100%; margin:0; background:var(--bg); color:var(--text); font
 body { display:flex; flex-direction:column; }
 #app { display:grid; grid-template-rows:auto 1fr; min-height:100vh; }
 header { position:sticky; top:0; z-index:10; background:linear-gradient(180deg,var(--panel),rgba(21,24,34,.86)); border-bottom:1px solid var(--stroke); backdrop-filter:blur(6px); }
-.bar { max-width:1200px; margin:8px auto; padding:8px 12px 12px; display:grid; gap:8px; grid-template-columns:1.1fr 1.1fr minmax(120px,auto) auto; align-items:center; }
-.brand { font-weight:700; letter-spacing:.3px; font-size:16px; }
+.bar { max-width:1200px; margin:8px auto; padding:8px 12px 12px; display:grid; gap:8px; grid-template-columns:auto 1fr auto; align-items:center; }
+.brand { display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.3px; font-size:16px; }
+.brand img { width:28px; height:28px; }
 .small { font-size:12px; color:var(--muted); }
+.panel-grid { width:100%; display:grid; gap:8px; grid-template-columns:1fr 1fr; }
 .field { display:flex; gap:10px; align-items:center; padding:10px 12px; border-radius:12px; background:var(--btn); border:1px solid var(--stroke); box-shadow:inset 0 0 0 1px rgba(255,255,255,.02); }
 .field span { text-transform:uppercase; font-size:11px; letter-spacing:.08em; color:var(--muted); }
 .field input { flex:1; border:0; outline:none; font:14px/1.2 inherit; color:var(--text); background:transparent; }
-.field input::placeholder { color:rgba(230,234,242,.5); }
+.field input::placeholder { color:rgba(230,234,242,.55); }
 .row2 { display:flex; gap:8px; align-items:center; grid-column:1/-1; flex-wrap:wrap; }
 #vehicleGroup { display:flex; gap:8px; flex-wrap:wrap; }
+.btnGroup { display:flex; gap:8px; }
 .pill { display:inline-flex; align-items:center; gap:6px; padding:8px 14px; border-radius:999px; background:var(--btn); border:1px solid var(--stroke); cursor:pointer; user-select:none; transition:border-color .2s, background-color .2s, color .2s; }
 .pill input { display:none; }
 .pill.active { border-color:var(--accent); background:var(--btn-h); color:#fff; }
@@ -41,7 +44,7 @@ header { position:sticky; top:0; z-index:10; background:linear-gradient(180deg,v
 .btn:disabled { opacity:.5; cursor:not-allowed; }
 .btn:not(:disabled):active { transform:translateY(1px); }
 main { position:relative; }
-#map { width:100%; height:100%; min-height:calc(100vh - 140px); background:#000; }
+#map { width:100%; height:100%; min-height:calc(100vh - 160px); background:#000; }
 .legend { position:absolute; left:16px; bottom:16px; z-index:4; background:rgba(21,24,34,.92); border:1px solid var(--stroke); border-radius:14px; padding:10px 14px; display:flex; gap:12px; align-items:center; box-shadow:0 12px 40px rgba(0,0,0,.45); }
 .legend .item { display:flex; align-items:center; gap:8px; }
 .legend .dot { width:12px; height:12px; border-radius:50%; }
@@ -55,11 +58,13 @@ main { position:relative; }
 #toast.show { opacity:1; pointer-events:auto; transform:translateY(0); }
 @media (max-width:1100px) {
   .bar { grid-template-columns:1fr 1fr; }
+  .bar .small:last-child { text-align:left; }
   #routeList { top:132px; }
 }
 @media (max-width:900px) {
   .bar { grid-template-columns:1fr; padding:8px 10px 12px; }
   .brand { font-size:15px; }
+  .panel-grid { grid-template-columns:1fr; }
   .field { width:100%; }
   .row2 { flex-direction:column; align-items:stretch; gap:10px; }
   #vehicleGroup { width:100%; }
@@ -69,7 +74,7 @@ main { position:relative; }
   #routeList { top:auto; right:16px; left:16px; bottom:96px; max-width:none; width:auto; }
   #routeList::after { content:""; display:block; height:4px; }
   #toast { left:16px; right:16px; max-width:none; }
-  .legend { left:16px; right:auto; bottom:16px; font-size:12px; }
+  .legend { left:16px; right:auto; bottom:16px; font-size:12px; flex-wrap:wrap; }
 }
 </style>
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=317aa42d-aa15-4acf-885a-6d6bfddb2339&suggest_apikey=317aa42d-aa15-4acf-885a-6d6bfddb2339"></script>
@@ -78,12 +83,16 @@ main { position:relative; }
 <div id="app">
   <header>
     <div class="bar">
-      <div class="brand">Trans-Time • Маршрут для грузовиков</div>
+      <div class="brand">
+        <img src="../assets/logo-tt.svg" alt="Trans-Time" loading="lazy"/>
+        <span>Trans-Time • Маршрут для грузовиков</span>
+      </div>
       <div class="small">Клик по карте → добавляет via‑точку</div>
-      <div></div>
       <div class="small" style="text-align:right">Альтернативы справа или снизу</div>
-      <div class="field"><span>Откуда</span><input id="from" type="text" placeholder="Адрес, город" autocomplete="off"/></div>
-      <div class="field"><span>Куда</span><input id="to" type="text" placeholder="Адрес, город" autocomplete="off"/></div>
+      <div class="panel-grid">
+        <label class="field" for="from"><span>Откуда</span><input id="from" type="text" placeholder="Адрес, город" autocomplete="off"/></label>
+        <label class="field" for="to"><span>Куда</span><input id="to" type="text" placeholder="Адрес, город" autocomplete="off"/></label>
+      </div>
       <div class="row2">
         <div id="vehicleGroup">
           <label class="pill active"><input type="radio" name="veh" value="car" checked>Легковой</label>
@@ -164,7 +173,7 @@ main { position:relative; }
   const setActivePill = (value) => {
     $$('#vehicleGroup .pill').forEach((pill) => {
       const input = pill.querySelector('input');
-      pill.classList.toggle('active', input?.value === value && input.checked);
+      pill.classList.toggle('active', input && input.value === value && input.checked);
     });
   };
 
@@ -188,6 +197,9 @@ main { position:relative; }
     if(!Number.isFinite(s) || s <= 0) return '—';
     const hours = Math.floor(s / 3600);
     const minutes = Math.round((s % 3600) / 60);
+    if(minutes === 60){
+      return `${hours + 1} ч 0 мин`;
+    }
     return hours ? `${hours} ч ${minutes} мин` : `${minutes} мин`;
   };
 
@@ -437,8 +449,7 @@ main { position:relative; }
 
   async function loadFrames(){
     try {
-      const base = location.href.split('#')[0].split('?')[0].replace(/[^/]+$/, '');
-      const response = await fetch(`${base}data/frames_ready.geojson?v=${Date.now()}`, {cache:'no-store'});
+      const response = await fetch(`/TT-map/map/data/frames_ready.geojson?v=${Date.now()}`, {cache:'no-store'});
       if(!response.ok) throw new Error('frames_ready.geojson not found');
       const data = await response.json();
 
