--- a/map/index.html
+++ b/map/index.html
@@ -28,10 +28,16 @@ header { position:sticky; top:0; z-index:10; background:linear-gradient(180deg,v
 .brand img { width:28px; height:28px; }
 .small { font-size:12px; color:var(--muted); }
 .panel-grid { width:100%; display:grid; gap:8px; grid-template-columns:1fr 1fr; }
-.field { display:flex; gap:10px; align-items:center; padding:10px 12px; border-radius:12px; background:var(--btn); border:1px solid var(--stroke); box-shadow:inset 0 0 0 1px rgba(255,255,255,.02); }
-.field span { text-transform:uppercase; font-size:11px; letter-spacing:.08em; color:var(--muted); }
+.field { display:flex; flex-direction:column; gap:6px; padding:10px 12px; border-radius:12px; background:var(--btn); border:1px solid var(--stroke); box-shadow:inset 0 0 0 1px rgba(255,255,255,.02); }
+.field-label { text-transform:uppercase; font-size:11px; letter-spacing:.08em; color:var(--muted); }
+.field-main { display:flex; align-items:center; gap:8px; }
+.field.has-action .field-main { flex-wrap:wrap; }
+.field.has-action .locateBtn { flex-shrink:0; }
 .field input { flex:1; border:0; outline:none; font:14px/1.2 inherit; color:var(--text); background:transparent; }
 .field input::placeholder { color:rgba(230,234,242,.55); }
+.locateBtn { white-space:nowrap; border:1px solid var(--stroke); border-radius:10px; padding:8px 12px; background:var(--btn-h); color:var(--text); font-weight:600; font-size:13px; cursor:pointer; transition:background .2s ease, color .2s ease; }
+.locateBtn:hover,.locateBtn:focus-visible { background:var(--accent); color:#fff; outline:none; }
+.locateBtn:disabled { opacity:.6; cursor:progress; }
 .row2 { display:flex; gap:8px; align-items:center; grid-column:1/-1; flex-wrap:wrap; }
 #vehicleGroup { display:flex; gap:8px; flex-wrap:wrap; }
 .btnGroup { display:flex; gap:8px; }
@@ -90,8 +96,19 @@ main { position:relative; }
       <div class="small">Клик по карте → добавляет via‑точку</div>
       <div class="small" style="text-align:right">Альтернативы справа или снизу</div>
       <div class="panel-grid">
-        <label class="field" for="from"><span>Откуда</span><input id="from" type="text" placeholder="Адрес, населённый пункт" autocomplete="off" autocapitalize="off" spellcheck="false"/></label>
-        <label class="field" for="to"><span>Куда</span><input id="to" type="text" placeholder="Адрес, населённый пункт" autocomplete="off" autocapitalize="off" spellcheck="false"/></label>
+        <div class="field has-action">
+          <label class="field-label" for="from">Откуда</label>
+          <div class="field-main">
+            <input id="from" type="text" placeholder="Адрес, населённый пункт" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"/>
+            <button id="locateMe" type="button" class="locateBtn">📍 Моё местоположение</button>
+          </div>
+        </div>
+        <div class="field">
+          <label class="field-label" for="to">Куда</label>
+          <div class="field-main">
+            <input id="to" type="text" placeholder="Адрес, населённый пункт" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"/>
+          </div>
+        </div>
       </div>
       <div class="row2">
         <div id="vehicleGroup">
@@ -134,6 +151,8 @@ main { position:relative; }
   const toInput = $('#to');
   const routeListEl = $('#routeList');
   const toastEl = $('#toast');
+  const locateBtn = $('#locateMe');
+  const locateBtnLabel = locateBtn ? locateBtn.textContent : '';
 
   const notifications = (() => {
     const queue = [];
@@ -205,6 +224,55 @@ main { position:relative; }
 
   const escapeHtml = (str) => String(str ?? '').replace(/[&<>"']/g, (ch) => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[ch]));
 
+  const setLocateBusy = (busy) => {
+    if(!locateBtn) return;
+    locateBtn.disabled = !!busy;
+    locateBtn.textContent = busy ? 'Определяем…' : locateBtnLabel;
+  };
+
+  function locateUser(){
+    if(!navigator.geolocation){
+      notifications.push('Геолокация не поддерживается в этом браузере.', 4200);
+      return;
+    }
+    setLocateBusy(true);
+    navigator.geolocation.getCurrentPosition(async (position) => {
+      try {
+        const coords = [position.coords.latitude, position.coords.longitude];
+        if(map){
+          map.setCenter(coords, Math.max(map.getZoom(), 12), {duration:300});
+        }
+        const result = await ymaps.geocode(coords, {results:1});
+        const geoObject = result.geoObjects.get(0);
+        const address = geoObject ? (typeof geoObject.getAddressLine === 'function' ? geoObject.getAddressLine() : geoObject.properties.get('text') || geoObject.properties.get('name')) : '';
+        if(address){
+          fromInput.value = address;
+          notifications.push(`📍 <b>Откуда</b>: ${escapeHtml(address)}`, 5200);
+          if(toInput.value.trim()){
+            buildRoute();
+          }
+        } else {
+          notifications.push('Не удалось определить адрес по координатам.', 4800);
+        }
+      } catch (error) {
+        console.warn(error);
+        notifications.push('Не удалось определить адрес по координатам.', 4800);
+      } finally {
+        setLocateBusy(false);
+      }
+    }, (error) => {
+      console.warn(error);
+      setLocateBusy(false);
+      let message = 'Не удалось получить геолокацию.';
+      if(error && typeof error.code === 'number'){
+        if(error.code === error.PERMISSION_DENIED){ message = 'Геолокация отклонена пользователем.'; }
+        else if(error.code === error.POSITION_UNAVAILABLE){ message = 'Данные геолокации недоступны.'; }
+        else if(error.code === error.TIMEOUT){ message = 'Превышено время ожидания геолокации.'; }
+      }
+      notifications.push(escapeHtml(message), 4800);
+    }, { enableHighAccuracy:true, timeout:15000, maximumAge:60000 });
+  }
+
   ymaps.ready(init);
 
   function init(){
@@ -257,6 +325,10 @@ main { position:relative; }
     });
 
     $('#buildBtn').addEventListener('click', buildRoute);
+
+    if(locateBtn){
+      locateBtn.addEventListener('click', locateUser);
+    }
 
     $('#clearVia').addEventListener('click', () => {
       userViaPoints.length = 0;
@@ -467,7 +539,7 @@ main { position:relative; }
 
   async function loadFrames(){
     try {
-      const response = await fetch(`/TT-map/map/data/frames_ready.geojson?v=${Date.now()}`, {cache:'no-store'});
+      const response = await fetch(`./data/frames_ready.geojson?v=${Date.now()}`, {cache:'no-store'});
       if(!response.ok) throw new Error('frames_ready.geojson not found');
       const data = await response.json();
 
